# react-native-pushy

./: .eslintrc  .gitignore  .gitmodules  .npmignore  .prettierrc.js  CHANGELOG.MD  CHANGELOG.md  LICENSE  README.md  app.plugin.js  bun.lockb  domains.json  endpoints.json  endpoints_cresc.json  index.d.ts  index.js  package.json  pushy.podspec  react-native-update.podspec  tsconfig.json
.github/workflows/: e2e_android.yml  e2e_ios.yml  lint.yml  publish.yml
.github/workflows/scripts/: start-firebase-emulator.bat
Example/: update.json
Example/harmony_use_pushy/: App.tsx  README.md  TestConsole.js  app.json  largeData.json  largeText.ts  metro.config.js  package-lock.json  package.json  update.json
Example/harmony_use_pushy/android/: settings.gradle
Example/harmony_use_pushy/harmony/: build-profile.json5  oh-package.json5
Example/harmony_use_pushy/harmony/entry/src/main/cpp/: .gitignore  CMakeLists.txt  PackageProvider.cpp
Example/harmony_use_pushy/ios/: Podfile
Example/react-native-harmony/: react-native-oh-tpl-react-native-camera-kit-14.0.0-beta15-0.0.3.tgz  rnoh-react-native-harmony-0.72.29.tgz
Example/react-native-harmony-cli/: rnoh-react-native-harmony-cli-0.0.26.tgz
Example/testHotUpdate/: .detoxrc.js  .gitignore  .npmrc  .update  Gemfile  README.md  app.json  babel.config.js  bun.lockb  detox.config.js  index.android.js  index.ios.js  metro.config.js  package.json  update.json
Example/testHotUpdate/.nyc_output/: 0341992d-ac02-43bf-b83b-a43d58d82f23.json  07caf4db-aae5-4a6d-ad04-46bcb3d999bb.json  11a13772-4a6a-40eb-9a53-ecdd52d43d9c.json  5140ba79-cc16-402d-b9ea-6c6647eb8324.json  567d30c0-af7c-4538-9e48-28df65ccd884.json  c5416197-e607-4c70-a717-4dea5dff19e2.json  f45cbde3-af32-4880-b276-321a181077f9.json
Example/testHotUpdate/android/: build.gradle  gradle.properties  settings.gradle
Example/testHotUpdate/e2e/: NativeModule.test.ts  jest.config.js
Example/testHotUpdate/ios/: Podfile  dummy.swift
android/: build.gradle  proguard.pro
android/jni/: Android.mk  Application.mk  DownloadTask.c  bspatch.c  cn_reactnative_modules_update_DownloadTask.h  hpatch.c  hpatch.h
docs/: README.md  _sidebar.md  api.md  changelog.md  cli.md  faq_advance.md  guide.md  guide2.md  guide3.md  index.html
harmony/: BuildProfile.ets  README.OpenSource  README.md  build-profile.json5  index.ets  oh-package-lock.json5  oh-package.json5
harmony/oh_modules/: rnoh
harmony/pushy/: oh-package-lock.json5  oh-package.json5  ts.ts
harmony/src/main/cpp/: CMakeLists.txt  PushyPackage.h  PushyTurboModule.cpp  patch.c  pushy.c  pushy.cpp  pushy.h
ios/: pushy_build_time.txt
ios/RCTHotUpdate/: RCTHotUpdate.h  RCTHotUpdate.m  RCTHotUpdateDownloader.h  RCTHotUpdateDownloader.m  RCTHotUpdateManager.h  RCTHotUpdateManager.m
ios/RCTHotUpdate.xcodeproj/: project.pbxproj
ios/RCTPushy/: RCTPushy.h  RCTPushy.m  RCTPushy.mm  RCTPushyDownloader.h  RCTPushyDownloader.m  RCTPushyDownloader.mm  RCTPushyManager.h  RCTPushyManager.m  RCTPushyManager.mm
ios/RCTPushy.xcodeproj/: project.pbxproj
lib/: NativeUpdate.js  NativeUpdate.ts  endpoint.js  endpoint.ts  getHost.js  hooks.js  index.d.ts  index.js  index.ts  index.web.js  main.js  main.ts  resolveAssetSource.js  simpleUpdate.js  simpleUpdate.tsx  type.ts  utils.ts
local-cli/: .babelrc  api.js  cli.json  index.js  user.js  utils.js
local-cli/src/: api.js  app.js  bundle.js  index.js  package.js  user.js  utils.js  versions.js
plugin/: withUpdate.js
react-native-pushy-cli/: .babelrc  .npmignore  cli.js  package.json
react-native-pushy-cli/src/: cli.js
scripts/: generateiOSBuildTime.sh  sentry.gradle  sentry.sh
src/: NativePushy.ts  client.js  client.native.ts  client.ts  client.tsx  context.ts  core.ts  index.native.ts  index.ts  index.web.js  isInRollout.ts  permissions.native.ts  permissions.ts  provider.jsx  provider.native.tsx  provider.tsx  provider.web.js  turboModuleSpec.ts  type.ts  utils.ts
(+153 files in other folders)
